--- a/views/show_keywords.slim
+++ b/views/show_keywords.slim
@@ -98,7 +98,7 @@ section
                           count++;
                           if(obj[objs]["order"]==null){
                             //console.log("type 1");
-                            keyword.push({'text': objs, 'size': obj[objs]});
+                            keyword.push({'text': objs, 'size': obj[objs]*2});
                           }else{
                             //console.log("type 2");
                             keyword.push({'text': objs, 'size': obj[objs]["order"]*50});
