--- a/views/home.slim
+++ b/views/home.slim
@@ -1,3 +1,4 @@
+.header-title  關鍵字雲服務平台
 header
   .header-content
     .header-content-inner
@@ -11,7 +12,7 @@ section#about.bg-primary
       .col-lg-8.col-lg-offset-2.text-center
         h2.section-heading 何謂關鍵字雲
         hr.light
-        p.text-faded 藉由使用者所提供的文件，如課程關鍵字、課程講義、課程字幕，由這些文件將產生與課程內容相關的關鍵字。
+        p.text-faded 藉由使用者所提供的文件，如課程關鍵字、課程講義、課程字幕，由這些文件將產生與課程內容相關的關鍵字雲。由網站所產生的關鍵字雲我們將會同步顯示於ShareCourse課程影片下方。當課程開始後，這個關鍵字雲將會隨著學生的學習歷程而變動。對於老師來說可以暸解學生在學習的歷程中觀看最多的視頻內容是哪一部分；而對於學生來說可以達到預習的功效，學生可以提前得知與這堂課相關資訊，可以先去預習。
         a.page-scroll.btn.btn-default.btn-xl.sr-button href="#services"  Get Started!
 section#services
   .container
@@ -24,59 +25,30 @@ section#services
       .col-lg-3.col-md-6.text-center
         .service-box
           i.fa.fa-4x.fa-upload.text-primary.sr-icons
-          h3 上傳課程文件
+          h3 1.上傳課程文件
           p.text-muted 上傳課程的講義、影片字幕、以及關鍵字
       .col-lg-3.col-md-6.text-center
         .service-box
           i.fa.fa-4x.fa-cogs.text-primary.sr-icons
-          h3 製作關鍵字雲
+          h3 2.製作關鍵字雲
           p.text-muted 使用相關課程文件，經由文本分析，產生與課程相關的關鍵字雲
       .col-lg-3.col-md-6.text-center
         .service-box
           i.fa.fa-4x.fa-cloud.text-primary.sr-icons
-          h3 產生關鍵字雲
+          h3 3.產生關鍵字雲初稿
           p.text-muted 關鍵字雲為該單元同學常遇到的困難點，關鍵字越大, 表示越多人對此關鍵字所代表的觀念有問題(或是越重要)
       .col-lg-3.col-md-6.text-center
         .service-box
           i.fa.fa-4x.fa-check-square.text-primary.sr-icons
-          h3 選擇關鍵字
+          h3 4.選擇關鍵字
           p.text-muted 使用者可以挑選關鍵字，並且預覽挑選完後的關鍵字雲
 section#portfolio.no-padding
-  / .container-fluid
-  /   .row.no-gutter.popup-gallery
-  /     .col-lg-4.col-sm-6
-  /       a.portfolio-box href="img/portfolio/fullsize/1.jpg" 
-  /         img.img-responsive alt="" src="img/portfolio/thumbnails/1.jpg" /
-  /       .portfolio-box-caption
-  /         .portfolio-box-caption-content
-  /           .project-category.text-faded
-  /             | Category
-  /           .project-name
-  /             | Project Name
-  /     .col-lg-4.col-sm-6
-  /       a.portfolio-box href="img/portfolio/fullsize/2.jpg" 
-  /         img.img-responsive alt="" src="img/portfolio/thumbnails/2.jpg" /
-  /       .portfolio-box-caption
-  /         .portfolio-box-caption-content
-  /           .project-category.text-faded
-  /             | Category
-  /           .project-name
-  /             | Project Name
-  /     .col-lg-4.col-sm-6
-  /       a.portfolio-box href="img/portfolio/fullsize/3.jpg" 
-  /         img.img-responsive alt="" src="img/portfolio/thumbnails/3.jpg" /
-  /       .portfolio-box-caption
-  /         .portfolio-box-caption-content
-  /           .project-category.text-faded
-  /             | Category
-  /           .project-name
-  /             | Project Name
 
 aside.bg-dark
   .container.text-center
     .call-to-action
       h2 網站說明書下載
-      a.btn.btn-default.btn-xl.sr-button href="https://goo.gl/T5DfrF" 
+      a.btn.btn-default.btn-xl.sr-button href="https://goo.gl/uLVRMm" 
         i.fa.fa-download.fa-lg.sr-contact
           | 下載
 section#contact
