modify description of web page

--- a/views/home.slim
+++ b/views/home.slim
@@ -35,12 +35,12 @@ section#services
       .col-lg-3.col-md-6.text-center
         .service-box
           i.fa.fa-4x.fa-cloud.text-primary.sr-icons
-          h3 3.產生關鍵字雲初稿
+          h3 3.顯示關鍵字雲初稿
           p.text-muted 關鍵字雲為該單元同學常遇到的困難點，關鍵字越大, 表示越多人對此關鍵字所代表的觀念有問題(或是越重要)
       .col-lg-3.col-md-6.text-center
         .service-box
           i.fa.fa-4x.fa-check-square.text-primary.sr-icons
-          h3 4.選擇關鍵字
+          h3 4.調整關鍵字
           p.text-muted 使用者可以挑選關鍵字，並且預覽挑選完後的關鍵字雲
 section#portfolio.no-padding
 
@@ -48,7 +48,7 @@ aside.bg-dark
   .container.text-center
     .call-to-action
       h2 網站說明書下載
-      a.btn.btn-default.btn-xl.sr-button href="https://goo.gl/uLVRMm" 
+      a.btn.btn-default.btn-xl.sr-button href="https://goo.gl/RdtMiq" 
         i.fa.fa-download.fa-lg.sr-contact
           | 下載
 section#contact
