--- a/views/home.slim
+++ b/views/home.slim
@@ -47,7 +47,7 @@ section#portfolio.no-padding
 aside.bg-dark
   .container.text-center
     .call-to-action
-      h2 網站說明書下載
+      h2 使用說明書下載
       a.btn.btn-default.btn-xl.sr-button href="https://goo.gl/RdtMiq" 
         i.fa.fa-download.fa-lg.sr-contact
           | 下載
