--- a/views/folder_type.slim
+++ b/views/folder_type.slim
@@ -40,3 +40,8 @@ section
         form method='get' action='/keyword/#{@current_uid}/#{@cid}/chapter'
           button.btn.btn-info.btn-lg.btn-block type='submit'
             i.fa.fa-plus aria-hidden="true"  關鍵字雲
+        p
+        
+        form method='get' action='/kmap/#{@current_uid}/#{@cid}/chapter'
+          button.btn.btn-info.btn-lg.btn-block type='submit'
+            i.fa.fa-plus aria-hidden="true"  知識地圖
