--- a/views/layout.slim
+++ b/views/layout.slim
@@ -8,6 +8,14 @@ html lang="en"
     meta name="author" content="yiwei_huang"
     title Keyword Cloud
     link rel="shortcut icon" href="/img/favicon.ico"
+    
+    script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" 
+    /! Import jQuery before materialize.js
+    script src="https://code.jquery.com/jquery-2.1.1.min.js" type="text/javascript" 
+    /! Latest compiled and minified CSS
+    link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/css/bootstrap-slider.css" rel="stylesheet" /
+    script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.7.2/bootstrap-slider.js" type="text/javascript" 
+
     /! Bootstrap Core CSS
     link href="/vendor/bootstrap/css/bootstrap.css" rel="stylesheet"
     link href="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/css/jasny-bootstrap.min.css" rel="stylesheet"
@@ -29,7 +37,7 @@ html lang="en"
       == yield
     
     /! jQuery
-    script src="/vendor/jquery/jquery.min.js" 
+    / script src="/vendor/jquery/jquery.min.js" 
     /! Bootstrap Core JavaScript
     script src="/vendor/bootstrap/js/bootstrap.min.js"
     script src="https://cdnjs.cloudflare.com/ajax/libs/jasny-bootstrap/3.1.3/js/jasny-bootstrap.min.js" 
