--- a/views/show_kmaps.slim
+++ b/views/show_kmaps.slim
@@ -52,7 +52,9 @@ section
                             div.row
                               button#close.btn.btn-danger.btn-md type="button"  onclick="choice(count,post_url)" 確認
                         .modal-footer 
-                          button#close.btn.btn-danger type="button"  onclick="kpoint()" Next
+                          button#close.btn.btn-danger type="button"  onclick="kpoint(#{chid['chapter_id']})" Next
+                          / button.button onclick="window.open('http://www.site.com');" 
+                          /   span.icon Open
                           button#close.btn.btn-default data-dismiss="modal" type="button"  onclick="remove()" Close
                   
                   css:
@@ -96,8 +98,21 @@ section
                         xhr.send(JSON.stringify(listToDelete));
                     }
                     
-                    function kpoint(){
-                      console.log('next step');
+                    function kpoint(chid){
+                    $.ajax({
+                        url: "/kmap/" + #{@current_uid} + "/" + #{@course_id} + "/" + chid + "/show/kmap",
+                        type: "GET",
+                        dataType: "json",
+                        success: function(response) {
+                          obj = response['url']['url'];
+                          window.open(obj);
+                        },
+
+                        error: function(response) {
+                          console.log(response);
+                          alert("ERROR!!!");
+                        },
+                      });
                     }
                   
                     function showtfidf(index, obj, chid) {
