--- a/views/show_kmaps.slim
+++ b/views/show_kmaps.slim
@@ -52,7 +52,7 @@ section
                             div.row
                               button#close.btn.btn-danger.btn-md type="button"  onclick="choice(count,post_url)" 確認
                         .modal-footer 
-                          button#close.btn.btn-danger type="button"  onclick="kpoint(#{chid['chapter_id']})" Next
+                          button#close.btn.btn-danger type="button"  onclick="kpoint(#{chid['chapter_id']})" Create
                           / button.button onclick="window.open('http://www.site.com');" 
                           /   span.icon Open
                           button#close.btn.btn-default data-dismiss="modal" type="button"  onclick="remove()" Close
