--- a/views/layout.slim
+++ b/views/layout.slim
@@ -34,6 +34,8 @@ html lang="en"
   
     body#page-top
       == slim :nav
+      .rowm
+        == slim :flash_bar
       == yield
     
     /! jQuery
